--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,5 +1,7 @@
+
 @import "reset";
-@import "https://fonts.googleapis.com/css?family=Open+Sans";
+@import "clearfix";
+@import "https://fonts.googleapis.com/css?family=Open+Sans:400,700";
 @import "variables";
 @import "html-tags";
 @import "web-header";
