--- a/src/scss/_songs-list.scss
+++ b/src/scss/_songs-list.scss
@@ -2,20 +2,44 @@
 
 // Styles
 .songs-list {
+	@include if-is-tablet {
+		display: flex;
+		flex-wrap: wrap;
+	}
+	
 	.song{
 		@extend .clearfix;
 		border-bottom: 1px solid $color-grey;
+
+		@include if-is-tablet {
+			box-sizing: border-box;
+			width: 20%; // calc(20% - 20px);
+			text-align: center;
+			padding: 10px;
+		}
+
 		.cover {
 			padding-top: 10px;
 			padding-bottom: 10px;
 			width: 60px;
 			float: left;
 			margin-right: 10px; 
+			@include if-is-tablet {
+				width: 100%;
+				margin-bottom: 10px;
+			}
 		}
 		.artist {
 			margin-top: 15px;
 			font-weight: bold;
 		}
-		.title {}
+		.artist, .title {
+			display: block;
+			white-space: nowrap;
+			text-overflow: ellipsis;
+			overflow: hidden;
+			height: 16px;
+			padding-right: 20px;
+		}
 	}
 }
