--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,4 @@
-
+@import "responsive-utilities";
 @import "reset";
 @import "clearfix";
 @import "https://fonts.googleapis.com/css?family=Open+Sans:400,700";
