--- a/src/scss/_web-header.scss
+++ b/src/scss/_web-header.scss
@@ -5,6 +5,7 @@ $web-header-color: $color-white;
 //Style
 .web-header {
 	top: 0px; left: 0px;
+	z-index: 99;
 	position: fixed;
 	width: 100%;
 	padding: 15px 0px;
