Refactorizamos para reutilizar la carga de canciones cuando creamos una canción

--- a/src/scss/_ui-states.scss
+++ b/src/scss/_ui-states.scss
@@ -7,6 +7,9 @@ body {
 
 	// Muestra el formulario
 	&.form-shown {
+		.add-icon {
+			transform: rotate(45deg);
+		}
 		.new-song-form {
 			display: flex;
 		}
