Modificamos el songs-list.js, llamándolo songs-list-manager y creando otro fichero con la última parte de su código llamado songs-list-events.js, cambiando también app.js y form.js

--- a/src/scss/_songs-list.scss
+++ b/src/scss/_songs-list.scss
@@ -30,10 +30,12 @@
 			}
 		}
 
-		.favourite-button{
+		.delete-button{
+			cursor: pointer;
 			float: right;
 			margin: 20px 10px 0 0;
 			@include if-is-tablet {
+				float: none;
 				margin: 0;
 			}
 		}
