añadimos drog and drop the caratualas y fichero audio

--- a/src/scss/_html-tags.scss
+++ b/src/scss/_html-tags.scss
@@ -74,6 +74,19 @@ button {
 	}
 }
 
+//TODO: Mover este estilo a un partial aparte
+.drop-zone {
+	@extend input;
+	background-color: $color-grey;
+	text-align: center;
+	text-transform: uppercase;
+	transition: all 0.25s;
+	font-size: $font-size-small;
+	&.drop-here {
+		background-color: lighten($color-sirena, 20%);
+	}
+}
+
 ::selection{
 	background: $color-ivory-ish;
 }
